@@ -22,6 +22,7 @@ Version 1.1.9 work in progress
 - Enh #2637: Related table alias set dynamically in relational query is now available in the scopes of related model (creocoder, Sam Dark)
 - Enh #2654: Enhanced CUrlManager::addRules() by allowing new rules to be inserted in front of the existing rules (Qiang)
 - Enh: Documented CModule accessors with @property for better IDE autocomplete (Sam Dark)
+- Enh: Added CWebUser->loginRequiredAjaxResponse - value to be returned for ajax calls in case the user session has expired (mdomba)
 
 Version 1.1.8 June 26, 2011
 ---------------------------
